// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VideoBlock /> it renders VideoBlock with autoplay 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper"
      >
        <video
          autoPlay={true}
          className="mfui-video-block__video"
          controls={false}
          loop={true}
          muted={true}
        >
          <source
            src="video"
            type="video/mp4"
          />
        </video>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with classes 1`] = `
<div
  className="mfui-video-block className rootClass"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description descriptionClass"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button buttonClass"
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper mfui-video-block__video-wrapper_with-content"
      >
        <video
          autoPlay={false}
          className="mfui-video-block__video"
          controls={true}
          loop={true}
          muted={true}
        >
          <source
            src="video.mp4"
            type="video/mp4"
          />
        </video>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with content 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button"
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper mfui-video-block__video-wrapper_with-content"
      >
        <video
          autoPlay={false}
          className="mfui-video-block__video"
          controls={true}
          loop={true}
          muted={true}
        >
          <source
            src="video.mp4"
            type="video/mp4"
          />
        </video>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with content and button download link 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button"
          download={true}
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper mfui-video-block__video-wrapper_with-content"
      >
        <video
          autoPlay={false}
          className="mfui-video-block__video"
          controls={true}
          loop={true}
          muted={true}
        >
          <source
            src="video.mp4"
            type="video/mp4"
          />
        </video>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with content but without button 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper mfui-video-block__video-wrapper_with-content"
      >
        <video
          autoPlay={false}
          className="mfui-video-block__video"
          controls={true}
          loop={true}
          muted={true}
        >
          <source
            src="video.mp4"
            type="video/mp4"
          />
        </video>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with default props 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper"
      >
        <video
          autoPlay={false}
          className="mfui-video-block__video"
          controls={true}
          loop={true}
          muted={true}
        >
          <source
            src="video.mp4"
            type="video/mp4"
          />
        </video>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with sound turned on 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper"
      >
        <video
          autoPlay={false}
          className="mfui-video-block__video"
          controls={true}
          loop={true}
          muted={false}
        >
          <source
            src="video"
            type="video/mp4"
          />
        </video>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with youtube media type 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper"
      >
        <iframe
          allow="autoplay"
          frameBorder="0"
          height="100%"
          src="https://www.youtube.com/embed/youtube?&autoplay=0&mute=1&loop=1&rel=0&controls=0&showinfo=0e&iv_load_policy=3&playlist=youtube"
          title="iframe"
          width="100%"
        />
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with youtube media type and autoplay 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper"
      >
        <iframe
          allow="autoplay"
          frameBorder="0"
          height="100%"
          src="https://www.youtube.com/embed/youtube?&autoplay=1&mute=1&loop=1&rel=0&controls=0&showinfo=0e&iv_load_policy=3&playlist=youtube"
          title="iframe"
          width="100%"
        />
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with youtube media type and sound turned on 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__video-wrapper"
      >
        <iframe
          allow="autoplay"
          frameBorder="0"
          height="100%"
          src="https://www.youtube.com/embed/youtube?&autoplay=0&mute=0&loop=1&rel=0&controls=0&showinfo=0e&iv_load_policy=3&playlist=youtube"
          title="iframe"
          width="100%"
        />
      </div>
    </GridColumn>
  </Grid>
</div>
`;
